--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,21 @@
+
+/* Houm palette */
+:root{
+  --red: #ff5000;
+  --salmon:#ffdbd0;
+  --beige: #f7f0f0;
+  --white: #f7eff0;
+  --black: #263238;
+  --grey: #f5f5f5;
+  --material-border: 0.5px solid #e9e9e9;
+  --border-radius: 2rem;
+  --input-hover: rgba(0, 0, 0, 0.13);
+}
+#root{
+  height: 100vh;
+}
 body {
+  background: #fff;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -7,7 +24,3 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
